# tomato-pi

./: .gitignore  CMakeLists.txt  LICENSE  tomato_pi.cpp
.github/workflows/: cmake-single-platform.yml  collector-build-and-test.yml  stream.yml
collector/: CMakeLists.txt  gpio.c
collector/src/: main.cpp
collector/tests/: test_gpio.cpp
